--- a/HelloMarten/HelloMarten.csproj
+++ b/HelloMarten/HelloMarten.csproj
@@ -6,10 +6,13 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="Model\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
   </ItemGroup>
 
 </Project>
