--- a/HelloMarten/HelloMarten.csproj
+++ b/HelloMarten/HelloMarten.csproj
@@ -6,14 +6,13 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
-    <Folder Include="Model\" />
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Marten" Version="1.5.2" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
   </ItemGroup>
 
 </Project>
